--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase CSS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+  <!-- <div class="box ease-in">
+  </div>
+  <div class="box ease">
+  </div> -->
+  <div class="ball">
+  </div>
 </body>
 
 </html>
