add: estilos en ejercicio de frontend mentor

--- a/ejercicio-maquetacion/index.html
+++ b/ejercicio-maquetacion/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -17,19 +22,19 @@
     <form id="form-feedback">
       <ul>
         <li>
-          <input type="button" value="1">
+          <input class="feedback-input" type="button" value="1">
         </li>
         <li>
-          <input type="button" value="2">
+          <input class="feedback-input" type="button" value="2">
         </li>
         <li>
-          <input type="button" value="3">
+          <input class="feedback-input" type="button" value="3">
         </li>
         <li>
-          <input type="button" value="4">
+          <input class="feedback-input" type="button" value="4">
         </li>
         <li>
-          <input type="button" value="5">
+          <input class="feedback-input" type="button" value="5">
         </li>
       </ul>
       <button type="submit">submit</button>
